# bounded-loops

./: .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: copilot-instructions.md
.github/instructions/: bounded-loops.instructions.md
.github/prompts/: bl-run.prompt.md  bl-write-loop.prompt.md
.github/workflows/: ci.yml
assets/: demo.tape
bounded_loops/: __init__.py  cli.py  composition.py  mcp_server.py  trust_store.py
bounded_loops/adapters/: _env.py
bounded_loops/application/: bounds.py  doctor.py  introspection.py  loop_audit.py  manifest.py  ports.py  run_loop.py  run_store.py
bounded_loops/domain/: errors.py  models.py  rules.py
bounded_loops/hooks/: __init__.py  verify_bounded_loop.py
catalog/: README.md
docs/: ARCHITECTURE.md  NINE-BOUNDS.md  README.md  WRITING-A-LOOP.md
docs/diagrams/: bounds-across-layers.mmd  lap-outcomes-state.mmd  loop-flow-sequence.mmd  ports-and-adapters.mmd
docs/real-run-example/: README.md  ledger.jsonl  transcript.jsonl
loops/a11y/: PROMPT.md  README.md  STATE.md  bounds.production.yaml  loop.yaml  (+1 more)
npm/: README.md  package.json
plugins/: README.md
scripts/: render_architecture_diagram.py  render_demo_gif.py  render_social_preview.py  smoke_mcp_server.py  verify_clean_room.py  verify_readme_outputs.py
tests/: test_cli.py  test_cli_new.py  test_composition.py  test_gate_hardening.py  test_mcp_server.py  test_scanner_fail_closed.py  test_trust_store.py  test_verify_bounded_loop_hook.py
(+723 files in other folders)
